# vid2vtf

./: .gitignore  README.md  pyproject.toml  requirements.txt  vid2vtf.py
.github/workflows/: python-publish.yml
src/vid2vtf/: __init__.py  __main__.py  cli.py  vid2vtf.py
