[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vid2vtf"
description = "Convert Videos into Animated VTF's (Valve Texture Format)"
version = "1.0.7"
readme = "README.md"
dynamic = ["dependencies"]
authors = [{name = "theredenemy"}]
requires-python = ">= 3.8"

[project.urls]
Repository = "https://github.com/theredenemy/vid2vtf.git"
Issues = "https://github.com/theredenemy/vid2vtf/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
vid2vtf-cli = "vid2vtf.cli:main"
vid2vtf = "vid2vtf.cli:main"
